--- a/taixinkanghu/src/main/res/values/styles.xml
+++ b/taixinkanghu/src/main/res/values/styles.xml
@@ -47,6 +47,26 @@
 
 	</style>
 
+	<style name="tick_radio_button_style">
+
+		<item name="android:textSize">16.0sp</item>
+
+		<item name="android:textColor">@color/main_color</item>
+
+		<item name="android:gravity">center</item>
+
+		<item name="android:background">@null</item>
+
+		<item name="android:layout_width">0.0dip</item>
+
+		<item name="android:layout_height">match_parent</item>
+
+		<item name="android:button">@null</item>
+
+		<item name="android:layout_weight">1.0</item>
+
+	</style>
+
 	<style name="umeng_fb_image_dialog_anim">
 
 	</style>
