[modify]更改布局高度

--- a/taixinkanghu/src/main/res/layout/activity_confirm_order.xml
+++ b/taixinkanghu/src/main/res/layout/activity_confirm_order.xml
@@ -103,7 +103,7 @@
 
 					<LinearLayout
 						android:layout_width="120dp"
-						android:layout_height="match_parent"
+						android:layout_height="wrap_content"
 						android:layout_marginRight="40dp"
 						android:layout_weight="0.0"
 						android:gravity="right|center"
