--- a/taixinkanghu/src/main/res/layout/activity_nurse_order_pay.xml
+++ b/taixinkanghu/src/main/res/layout/activity_nurse_order_pay.xml
@@ -17,39 +17,48 @@
 		android:orientation="vertical">
 
 		<LinearLayout
-			android:layout_width="300dp"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="10dp"
+			android:gravity="center_vertical"
+			android:orientation="horizontal"
+			android:paddingBottom="5dp"
+			android:paddingLeft="15dp"
+			android:paddingRight="15dp">
+
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:gravity="center"
+				android:text="订单号："
+				android:textColor="@color/text_color_black"
+				android:textSize="14sp"/>
+
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:gravity="center"
+				android:text="201506172734270"
+				android:textColor="@color/text_color_black"
+				android:textSize="14.0sp"/>
+
+		</LinearLayout>
+
+		<include layout="@layout/item_dividing_line_horizontal"/>
+
+		<LinearLayout
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center"
-			android:layout_marginBottom="20dp"
-			android:layout_marginTop="40dp"
+			android:background="@color/white"
 			android:orientation="vertical">
 
 			<LinearLayout
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_gravity="center"
-				android:orientation="horizontal">
-
-				<TextView
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:gravity="center"
-					android:text="订单号："
-					android:textSize="20sp"/>
-
-				<TextView
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:gravity="center"
-					android:text="201506172734270"
-					android:textSize="20sp"/>
-
-			</LinearLayout>
-
-			<LinearLayout
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center"
+				android:layout_marginTop="30dp"
+				android:layout_marginBottom="30dp"
 				android:orientation="horizontal">
 
 				<TextView
@@ -65,13 +74,14 @@
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:gravity="center"
-					android:text="5600"
+					android:text="660"
 					android:textColor="@color/date_select_green"
 					android:textSize="60sp"/>
 
 			</LinearLayout>
-
 		</LinearLayout>
+
+		<include layout="@layout/item_dividing_line_horizontal"/>
 
 		<LinearLayout
 			android:layout_width="match_parent"
