--- a/taixinkanghu/src/main/res/layout/activity_select_nurse.xml
+++ b/taixinkanghu/src/main/res/layout/activity_select_nurse.xml
@@ -1,6 +1,6 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout android:id="@+id/owner_select_page"
+			 xmlns:android="http://schemas.android.com/apk/res/android"
 			 xmlns:tools="http://schemas.android.com/tools"
-			 android:id="@+id/owner_select_page"
 			 android:layout_width="match_parent"
 			 android:layout_height="match_parent"
 			 tools:context="com.taixinkanghu.app.ui.activity.ChooseNurseActivity">
@@ -12,23 +12,24 @@
 		android:weightSum="1">
 
 		<!--logo+名称-->
-		<include layout="@layout/include_header"
-				 android:id="@+id/title"/>
+		<include
+			android:id="@+id/title"
+			layout="@layout/include_header"/>
 
 		<!--筛选功能按键-->
 		<LinearLayout
-			android:orientation="vertical"
+			android:id="@+id/func_region"
 			android:layout_width="match_parent"
 			android:layout_height="425dp"
-			android:id="@+id/func_region"
-			android:layout_weight="1">
+			android:layout_weight="1"
+			android:orientation="vertical">
 
 			<LinearLayout
+				android:id="@+id/tips_region"
 				android:layout_width="match_parent"
 				android:layout_height="20dp"
 				android:background="@drawable/bg_bule_frame_bottom"
-				android:orientation="horizontal"
-				android:id="@+id/tips_region">
+				android:orientation="horizontal">
 
 				<TextView
 					android:id="@+id/tips_tv"
@@ -37,37 +38,47 @@
 					android:background="#fff"
 					android:gravity="center"
 					android:text="请先设置服务开始时间和结束时间"
-					android:textColor="#cc0000" />
+					android:textColor="#cc0000"/>
 
 			</LinearLayout>
 
-			<LinearLayout
+			<android.support.v4.widget.SwipeRefreshLayout
+				android:id="@id/swipeRefreshLayout"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
-				android:orientation="vertical"
-				android:id="@+id/display_region"
-				android:background="#fff"
-				android:layout_weight="0">
+				android:layout_weight="1.0">
 
-				<ListView
-					android:id="@+id/nurse_display_list"
+
+				<LinearLayout
+					android:id="@+id/display_region"
 					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:background="#ffffffff"
-					android:choiceMode="singleChoice"
-					android:divider="@color/divider_color"
-					android:dividerHeight="0.100000024dp"
-					android:listSelector="@drawable/bg_btn_translucent"
-					android:scrollbars="none" />
+					android:layout_height="match_parent"
+					android:layout_weight="0"
+					android:background="#fff"
+					android:orientation="vertical">
 
-			</LinearLayout>
+					<ListView
+						android:id="@+id/nurse_display_list"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:background="#ffffffff"
+						android:choiceMode="singleChoice"
+						android:divider="@color/divider_color"
+						android:dividerHeight="0.100000024dp"
+						android:listSelector="@drawable/bg_btn_translucent"
+						android:scrollbars="none"/>
+
+				</LinearLayout>
+
+			</android.support.v4.widget.SwipeRefreshLayout>
 		</LinearLayout>
 
 		<!--底部功能菜单-->
-		<include layout="@layout/include_main_button"
-				 android:id="@+id/bottom"
-				 android:layout_height="wrap_content"
-				 android:layout_width="match_parent"
+		<include
+			android:id="@+id/bottom"
+			layout="@layout/include_main_button"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
 			/>
 	</LinearLayout>
 
